@@ -21,7 +21,6 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.ai.targeting.TargetingConditions;
-import net.minecraft.world.entity.decoration.BlockAttachedEntity;
 import net.minecraft.world.entity.decoration.Painting;
 import net.minecraft.world.entity.decoration.PaintingVariant;
 import net.minecraft.world.entity.item.ItemEntity;
@@ -35,28 +34,26 @@ import net.minecraft.world.level.block.state.properties.BedPart;
 import net.minecraft.world.phys.EntityHitResult;
 import net.minecraft.world.phys.HitResult;
 import net.minecraft.world.phys.Vec3;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.event.RegisterStructureConversionsEvent;
-import net.neoforged.neoforge.event.entity.EntityLeaveLevelEvent;
-import net.neoforged.neoforge.event.entity.living.FinalizeSpawnEvent;
-import net.neoforged.neoforge.event.entity.living.MobEffectEvent;
-import net.neoforged.neoforge.event.entity.living.MobSpawnEvent;
-import net.neoforged.neoforge.event.entity.player.PlayerEvent;
-import net.neoforged.neoforge.event.entity.player.PlayerInteractEvent;
-import net.neoforged.neoforge.event.level.BlockEvent;
-import net.neoforged.neoforge.event.tick.EntityTickEvent;
+import net.minecraftforge.event.TickEvent;
+import net.minecraftforge.event.entity.living.LivingEvent;
+import net.minecraftforge.event.entity.living.MobEffectEvent;
+import net.minecraftforge.event.entity.living.MobSpawnEvent;
+import net.minecraftforge.event.entity.player.PlayerEvent;
+import net.minecraftforge.event.entity.player.PlayerInteractEvent;
+import net.minecraftforge.event.level.BlockEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
 import vazkii.patchouli.api.PatchouliAPI;
 
 import java.util.List;
 import java.util.Optional;
 
-@EventBusSubscriber(modid = FaunaAndOrchestra.MOD_ID, bus = EventBusSubscriber.Bus.GAME)
+@Mod.EventBusSubscriber(modid = FaunaAndOrchestra.MOD_ID, bus = Mod.EventBusSubscriber.Bus.FORGE)
 public class ModGameEvents {
     private static int musicalityIndex;
 
     @SubscribeEvent
-    public static void quirkyFrogChoir(EntityTickEvent.Post event) {
+    public static void quirkyFrogChoir(LivingEvent.LivingTickEvent event) {
         if (!event.getEntity().level().isClientSide() &&
                 event.getEntity().tickCount % 60 == 0 &&
                 event.getEntity().level().getRandom().nextFloat() <= 0.01F &&
@@ -68,7 +65,7 @@ public class ModGameEvents {
 
             if (nearbyFrogs.size() >= 5) {
                 List<QuirkyFrogEntity> frogChoir = nearbyFrogs.stream().limit(5).toList();
-                QuirkyFrogEntity choirConductor = frogChoir.getFirst();
+                QuirkyFrogEntity choirConductor = frogChoir.get(0);
                 choirConductor.setFrogChoir(frogChoir.subList(1, frogChoir.size()));
                 for (QuirkyFrogEntity chorister : choirConductor.getFrogChoir()) {
                     chorister.setSinging(true);
@@ -82,13 +79,13 @@ public class ModGameEvents {
     public static void whistleClickOnEntity(PlayerInteractEvent.EntityInteractSpecific event) {
         ItemStack stack = event.getItemStack();
 
-        if (stack.is(ModItems.WHISTLE) && event.getTarget() instanceof TamableAnimal animal) {
+        if (stack.is(ModItems.WHISTLE.get()) && event.getTarget() instanceof TamableAnimal animal) {
             stack.use(event.getLevel(), event.getEntity(), event.getHand());
         }
     }
 
     @SubscribeEvent
-    public static void assignMusicality(FinalizeSpawnEvent event) {
+    public static void assignMusicality(MobSpawnEvent.FinalizeSpawn event) {
         if (event.getEntity() instanceof MusicalEntity musicalEntity) {
             musicalityIndex++;
             if (musicalityIndex == 3) {
@@ -110,7 +107,7 @@ public class ModGameEvents {
 
     @SubscribeEvent
     public static void onBoogieEnd(MobEffectEvent.Expired event) {
-        if (event.getEffectInstance().is(ModEffects.BOOGIE)) {
+        if (event.getEffectInstance().getEffect().equals(ModEffects.BOOGIE.get())) {
             if (event.getEntity() instanceof PathfinderMob mob) {
                 mob.setNoAi(false);
             }
@@ -155,11 +152,12 @@ public class ModGameEvents {
     }
 
     @SubscribeEvent
-    public static void onFaustTick(EntityTickEvent.Post event) {
+    public static void onFaustTick(LivingEvent.LivingTickEvent event) {
         if (event.getEntity() instanceof Faust faust && faust.getTipCasePos() == null && faust.getOrion() != null) {
             Vec3 vec = faust.position().subtract(faust.getOrion().position());
-            Direction facing = Direction.getNearest(vec);
-            Direction direction = Direction.getNearest(vec.yRot((float) (Math.PI/2)));
+            Direction facing = Direction.getNearest(vec.x, vec.y, vec.z);
+            Vec3 rotatedVec = vec.yRot((float) (Math.PI/2));
+            Direction direction = Direction.getNearest(rotatedVec.x, rotatedVec.y, rotatedVec.z);
 
             BlockPos.MutableBlockPos blockPos = new BlockPos.MutableBlockPos(faust.getX(), faust.getY(), faust.getZ());
             blockPos = blockPos.move(direction);
